Fix Java 11 compatibility issues in PostgreSQL implementation
- Replace pattern matching in instanceof (Java 16+) with traditional cast
- Replace Stream.toList() (Java 16+) with collect(Collectors.toList())
- Replace text blocks (Java 15+) with string concatenation
- Replace switch expressions (Java 14+) with traditional switch statements

These changes ensure the code compiles on Java 11, 17, and 21.

https://claude.ai/code/session_011hZLxaPTu5dADdjuN7mpQF